[gd_scene load_steps=11 format=3 uid="uid://dykb4ugtithxu"]

[ext_resource type="Script" uid="uid://c5lot07xnx3cl" path="res://scenes/zones/zone_tilemap/zone_tilemap.gd" id="1_w46j4"]
[ext_resource type="PackedScene" uid="uid://dm4ramat461hf" path="res://scenes/tilemaps/pulse_node.tscn" id="2_ryy4y"]
[ext_resource type="PackedScene" uid="uid://d3givt02dwnlp" path="res://scenes/tilemaps/hexagon_tile_map_layer.tscn" id="2_v6of8"]
[ext_resource type="PackedScene" uid="uid://eomevugae50m" path="res://scenes/characters/main_character/character_body_2d.tscn" id="4_q6nfb"]
[ext_resource type="PackedScene" uid="uid://cs1ystg6v3d2d" path="res://scenes/camera/camera_zoom_controller/camera_zoom_controller.tscn" id="5_q6nfb"]
[ext_resource type="PackedScene" uid="uid://lt845ceb1dib" path="res://scenes/camera/camera_pan_controller/camera_pan_controller.tscn" id="6_3euei"]
[ext_resource type="PackedScene" uid="uid://df31gdo3jg7rp" path="res://scenes/camera/camera_clamp_controller/camera_clamp_controller.tscn" id="6_hxkky"]

[sub_resource type="Shader" id="Shader_ryy4y"]
code = "shader_type canvas_item;

// Controls the speed of the pulse
uniform float speed : hint_range(0.1, 10.0) = 2.0;

// The color to apply to the sprite. Default is white (no change).
// 'source_color' allows Godot to treat this as sRGB and gives you a color picker.
uniform vec4 tint_color : source_color = vec4(1.0, 1.0, 1.0, 1.0);

uniform float min_alpha : hint_range(0.0, 1.0) = 0.1;

void fragment() {
    // 1. Get the sprite's original texture color
    vec4 tex_color = texture(TEXTURE, UV);
    
    // 2. Apply the custom color (Tint)
    // We multiply the texture color by our uniform color.
    vec4 final_color = tex_color * tint_color;
	
    // 3. Calculate the pulse
    // First, get a value from 0.0 to 1.0
    float wave = (sin(TIME * speed) + 1.0) / 2.0;
    
    // Then, map that value to the 0.1 -> 1.0 range
    // Logic: Minimum + (NormalizedWave * (Maximum - Minimum))
    float pulse = min_alpha + (wave * (1.0 - min_alpha));
    
    // 4. Apply the pulse to the alpha channel
    // We modify the alpha of our tinted color
    COLOR = vec4(final_color.rgb, final_color.a * pulse);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mmmsv"]
shader = SubResource("Shader_ryy4y")
shader_parameter/speed = 8.00000037674012
shader_parameter/tint_color = Color(0.11372549, 1, 0.42745098, 1)
shader_parameter/min_alpha = 0.50000002375

[sub_resource type="GDScript" id="GDScript_w4xf3"]
script/source = "extends Camera2D
"

[node name="ZoneTilemap" type="Node2D"]
script = ExtResource("1_w46j4")
metadata/_edit_group_ = true

[node name="MainZoneTileMapLayer" parent="." instance=ExtResource("2_v6of8")]
unique_name_in_owner = true
position = Vector2(-82, -95)

[node name="PulseNode" parent="." instance=ExtResource("2_ryy4y")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_mmmsv")
width = 12.0

[node name="CharacterBody2D" parent="." instance=ExtResource("4_q6nfb")]
unique_name_in_owner = true
position = Vector2(-1, 0)
scale = Vector2(2, 2)
is_debug_mode = false

[node name="Camera2D" type="Camera2D" parent="."]
script = SubResource("GDScript_w4xf3")

[node name="CameraZoomController" parent="Camera2D" instance=ExtResource("5_q6nfb")]

[node name="CameraPanController" parent="Camera2D" instance=ExtResource("6_3euei")]

[node name="CameraClampController" parent="Camera2D" instance=ExtResource("6_hxkky")]
boundary_min = Vector2(-1000, -1000)
boundary_max = Vector2(1000, 1000)
